# usb-device

./: .gitignore  .shellcheckrc  DESIGN.md  LICENSE  README.md  devices.conf.example  hub-agent  hub_agent.py  insight_hub.py  install.sh  iokit_usb.py  pio-common.sh  piomonitor  piorun  piosermon  piotest  pioupload  serial-monitor  serial_monitor.py  setup.sh  shell-integration.sh  usb-device
.githooks/: commit-msg
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: bash-coverage.md  dx_notes.md  pio-integration.md
docs/superpowers/specs/: 2026-03-24-device-query-and-json-design.md  2026-04-01-partner-register-and-fuzzy-match.md  2026-04-17-action-dispatch-and-power-backends.md
labgrid/: pyproject.toml
labgrid/deploy/: README.md  coordinator.plist  exporter.plist  exporter.yaml.example  fixtures.yaml.example  setup.sh
labgrid/examples/: environment.yaml  exporter.yaml
labgrid/labgrid_usb_device/: __init__.py  conf_parser.py  driver.py  export.py  resource.py  run_exporter.py
labgrid/tests/: test_conf_parser.py
test/: coverage.sh  setup.sh  test_config.py  test_insight_hub.py  test_insight_hub_live.py  usb-device-mock.bats  usb-device.bats
types.d/: esp32.sh  insight_hub.sh
usb_device/: __init__.py  __main__.py  config.py
